--- a/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
+++ b/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
@@ -1,6 +1,6 @@
 .editor-container {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #fae5fe;
   padding: 20px;
   min-height: 100vh;
 }
