Mejora de diseño y de estructura

--- a/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
+++ b/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
@@ -84,3 +84,14 @@ button:hover {
   border-radius: 5px;
 
 }
+
+textarea {
+  width: 100%;
+  margin-top: 10px;
+  padding: 10px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  resize: vertical;
+  font-family: inherit;
+}
+
