--- a/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
+++ b/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
@@ -94,4 +94,37 @@ textarea {
   resize: vertical;
   font-family: inherit;
 }
+/*responsive*/
+@media (max-width: 768px) {
+  section,
+  .pregunta-block {
+    padding: 15px;
+    margin: 10px;
+    max-width: 95%;
+  }
+
+  input[type="text"],
+  input[type="file"],
+  select {
+    font-size: 1rem;
+    padding: 8px;
+  }
+
+  .elemento {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 5px;
+  }
+
+  button {
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .dropzone {
+    flex-direction: column;
+    gap: 8px;
+    min-height: 60px;
+  }
+}
 
