--- a/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
+++ b/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
@@ -128,3 +128,11 @@ textarea {
   }
 }
 
+button.eliminar {
+  background-color: #e74c3c;
+  color: white;
+}
+button.eliminar:hover {
+  background-color: #c0392b;
+}
+
