--- a/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
+++ b/frontend/src/pages/creacionCuestionarios/editorCuestionarioEstilo.css
@@ -128,11 +128,16 @@ textarea {
   }
 }
 
-button.eliminar {
-  background-color: #e74c3c;
-  color: white;
-}
-button.eliminar:hover {
+.btn-eliminar {
   background-color: #c0392b;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
 }
+.btn-eliminar:hover {
+  background-color: #a93226;
+}
+
 
